--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "styled-component": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
